[package]
name = "over"
edition = "2021"
version = "0.0.1"
description = "A git-based files overlay manager (dotfiles as overlays)"
# readme = "README.md"
repository = "https://github.com/rawtools/over/"
license = "MIT"


[dependencies]
dialoguer = "0.10.2"
directories = "4.0.1"
dirs = "4.0.0"
globset = "0.4.8"
normpath = "0.3.2"
symlink = "0.1.0"
tera = "1.15.0"
walkdir = "2.3.2"
tokio = { version = "1.21.0", features = ["full"] }
indicatif = "0.17.0"
toml_edit = { version = "0.14.4", features = ["easy"] }
git2 = "0.14.4"
git2_credentials = "0.8.0"
async-trait = "0.1.57"
# asyncgit = "0.20.1"
console = "0.15.0"
prs-lib = "0.3.2"
keyring = "1.1.2"
anyhow = "1.0.64"
thiserror = "1.0.34"
futures = "0.3.24"
once_cell = "1.14.0"

[dependencies.clap]
features = ["derive", "env", "unicode", "cargo"]
version = "3.1.18"

[dependencies.config]
features = ["json", "yaml", "toml"]
version = "0.13.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dev-dependencies]
rstest = "0.13.0"
trycmd = "0.13.4"

[features]


[patch.crates-io]
indicatif = { git = 'https://github.com/console-rs/indicatif' }
