[package]
name = "over"
edition = "2021"
version = "0.0.1"
description = "A git-based files overlay manager (dotfiles as overlays)"
# readme = "README.md"
repository = "https://github.com/rawtools/over/"
license = "MIT"


[dependencies]
dialoguer = "0.11"
directories = "6.0"
dirs = "6.0"
globset = "0.4"
normpath = "1.3"
symlink = "0.1"
tera = "1.20"
walkdir = "2"
tokio = { version = "1.43", features = ["full"] }
indicatif = "0.17"
toml = "0.8" 
git2 = "0.16"
git2_credentials = "0.11"
async-trait = "0.1"
# asyncgit = "0.20.1"
console = "0.15"
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
once_cell = "1.20"

[dependencies.clap]
features = ["derive", "env", "unicode", "cargo"]
version = "4.5"

[dependencies.config]
features = ["json", "yaml", "toml"]
version = "0.15"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
assert_cmd = { version = "2.0", features = ["color", "color-auto"] }
assert_fs = { version = "1.1", features = ["color", "color-auto"] }
dir-diff = "0.3"
predicates = { version = "3.0", features = ["color"] }
rstest = "0.17"
trycmd = "0.14"

[features]

